--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       </div>
     </div>
     <button id="whatsHeader" class="whats-mini" title="Falar no WhatsApp">Whats</button>
+    <button id="themeToggle" class="whats-mini" title="Alternar tema">Tema</button>
   </header>
 
   <section class="hero">
