--- a/index.html
+++ b/index.html
@@ -1,87 +1,17 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Catálogo • Feira Digital Diamantino</title>
-  <meta name="theme-color" content="#111018" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css" />
-  <script defer src="config.js"></script>
-  <script defer src="theme.js"></script>
-  <script defer src="app.js"></script>
-</head>
-<body>
-  <header class="topbar">
-    <div class="brand">
-      <div class="avatar">FD</div>
-      <div>
-        <h1 id="storeName">Feira Digital Diamantino</h1>
-        <div id="storeInfo" class="meta"><span class="badge open">Aberto</span> • Entrega via WhatsApp</div>
-      </div>
-    </div>
-    <div class="top-actions">
-      <button id="themeToggle" class="whats-mini" aria-label="Alternar tema">Tema</button>
-      <button id="whatsHeader" class="whats-mini">Whats</button>
-    </div>
-  </header>
-
-  <section class="hero">
-    <div class="search-wrap">
-      <input id="search" type="search" placeholder="Buscar produto..." />
-    </div>
-    <div id="categories" class="chips"></div>
-  </section>
-
-  <main id="products" class="cards" aria-live="polite"></main>
-
-  <footer id="cartBar" class="cartbar hidden">
-    <button id="openCart" class="primary">Carrinho (<span id="cartCount">0</span>) • <span id="cartTotal">R$ 0,00</span></button>
-  </footer>
-
-  <dialog id="cartModal" class="modal">
-    <div class="modal-head">
-      <strong>Seu carrinho</strong>
-      <button id="closeCart" class="icon">✕</button>
-    </div>
-    <div id="cartItems" class="cart-list"></div>
-    <div class="cart-total">Total: <strong id="cartTotalModal">R$ 0,00</strong></div>
-    <button id="checkout" class="primary">Enviar pedido no WhatsApp</button>
-  </dialog>
-
-  <template id="productCardTpl">
-    <article class="card">
-      <div class="thumb"></div>
-      <div class="info">
-        <h3 class="title"></h3>
-        <p class="desc"></p>
-        <div class="meta-line"><span class="category"></span> • <span class="unit"></span></div>
-        <div class="buy">
-          <strong class="price">R$ 0,00</strong>
-          <div class="qty">
-            <button class="qty-btn minus">−</button>
-            <input class="qty-input" type="number" inputmode="numeric" min="0" value="0"/>
-            <button class="qty-btn plus">+</button>
-          </div>
-        </div>
-      </div>
-    </article>
-  </template>
-
-  <template id="cartItemTpl">
-    <div class="cart-item">
-      <span class="cart-name"></span>
-      <div class="qty">
-        <button class="qty-btn" data-action="minus">−</button>
-        <input class="qty-input" type="number" inputmode="numeric" min="0" value="0"/>
-        <button class="qty-btn" data-action="plus">+</button>
-      </div>
-      <span class="cart-line">R$ 0,00</span>
-    </div>
-  </template>
-
-  <div id="toast" class="toast hidden" role="alert"></div>
-</body>
-</html>
+﻿<!DOCTYPE html><html lang="pt-BR"><head>
+<meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
+<title>Bancas • Feira Digital Diamantino</title>
+<meta name="theme-color" content="#111018"/>
+<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="styles.css"/>
+<script defer src="config.js"></script><script defer src="theme.js"></script><script defer src="feira.js"></script>
+<style>.grid{display:grid;gap:12px;padding:12px 16px 40px}@media(min-width:700px){.grid{grid-template-columns:repeat(2,1fr)}}@media(min-width:1024px){.grid{grid-template-columns:repeat(3,1fr)}}.producer-card{display:flex;gap:12px;background:var(--card);border:1px solid rgba(255,255,255,.06);border-radius:18px;padding:10px;align-items:center}.producer-thumb{width:72px;height:72px;border-radius:14px;background:#14121d;background-size:cover;background-position:center;border:1px solid rgba(255,255,255,.06)}</style>
+</head><body>
+<header class="topbar"><div class="brand"><div class="avatar">FD</div><div><h1>Bancas da Feira</h1><div class="meta"><span class="badge open">Aberto</span> • Escolha um produtor</div></div></div>
+<div class="top-actions"><button id="themeToggle" class="whats-mini" aria-label="Alternar tema">Tema</button><a class="whats-mini" href="cadastro.html">Cadastrar produtor</a><a class="whats-mini" href="catalogo.html">Catálogo</a></div></header>
+<section class="hero"><div class="search-wrap"><input id="search" type="search" placeholder="Buscar produtor por nome, cidade..."/></div></section>
+<main id="grid" class="grid" aria-live="polite"></main>
+<template id="producerTpl"><article class="producer-card"><div class="producer-thumb"></div><div class="producer-info" style="flex:1;min-width:0"><h3 class="p-name" style="margin:0 0 4px"></h3><p class="p-line" style="margin:0;color:var(--muted);font-size:13px"></p></div><div class="producer-actions"><a class="primary" target="_self">Ver banca</a></div></article></template>
+<div id="toast" class="toast hidden" role="alert"></div>
+</body></html>
