Atualização: tema escuro/claro, layout de produtos e CSS higienizado

--- a/cadastro.html
+++ b/cadastro.html
@@ -11,6 +11,11 @@
 .row{display:grid;gap:12px;grid-template-columns:1fr 1fr}.row-3{display:grid;gap:12px;grid-template-columns:1fr 1fr 1fr}
 .field label{display:block;margin:4px 0 6px;font-weight:600}
 .field input,.field textarea,.field select{width:100%;padding:10px;border-radius:10px;border:1px solid rgba(255,255,255,.12);background:transparent;color:var(--text)}
+.image-input{display:flex;gap:8px;align-items:center}
+.image-input input[type="text"]{flex:1}
+.image-input input[type="file"]{font-size:12px;border:1px solid rgba(255,255,255,.12);border-radius:10px;padding:6px 10px;background:transparent;color:var(--text);cursor:pointer}
+.image-preview{margin-top:8px;width:120px;height:120px;border-radius:14px;background:rgba(255,255,255,.04);border:1px solid rgba(255,255,255,.12);background-size:cover;background-position:center;display:none}
+.image-preview.show{display:block}
 .hint{font-size:12px;color:var(--muted)}.error{font-size:12px;color:#ef4444;margin-top:4px;display:none}.error.show{display:block}
 .section-title{margin:18px 0 8px;font-weight:800}.group{border:1px dashed rgba(255,255,255,.12);border-radius:14px;padding:12px}
 .checks{display:flex;gap:12px;flex-wrap:wrap}.checks label{display:flex;align-items:center;gap:6px;border:1px solid rgba(255,255,255,.12);padding:6px 10px;border-radius:10px;cursor:pointer}
@@ -26,8 +31,9 @@
     <div class="field"><label for="cidade">Cidade *</label><input id="cidade" placeholder="Diamantino - MT" required/></div>
     <div class="field"><label for="whats">WhatsApp (somente dígitos) *</label><input id="whats" placeholder="5565999990000" required inputmode="numeric"/></div>
     <div class="field"><label for="pix">Chave Pix</label><input id="pix" placeholder="CPF, CNPJ, e-mail ou aleatória"/></div>
-    <div class="field"><label for="logo">Logo (URL ou data:... base64)</label><input id="logo" placeholder="https://..."/></div>
+    <div class="field"><label for="logo">Logo (URL ou carregar arquivo)</label><div class="image-input"><input id="logo" placeholder="https://... ou data:image..."/><input type="file" id="logoFile" accept="image/*" title="Enviar imagem"/></div><div id="logoPreview" class="image-preview" aria-hidden="true"></div><p class="hint">Use o botão para converter uma imagem local em data URL automaticamente.</p></div>
     <div class="field"><label for="csv">Catálogo (Google Sheets publicado em CSV)</label><input id="csv" placeholder="https://docs.google.com/...&output=csv"/></div>
+    <div class="field"><label for="cover">Imagem de capa da banca</label><div class="image-input"><input id="cover" placeholder="Opcional — URL ou data:image..."/><input type="file" id="coverFile" accept="image/*" title="Enviar imagem"/></div><div id="coverPreview" class="image-preview" aria-hidden="true"></div><p class="hint">Esta imagem aparece no topo do catálogo da banca.</p></div>
   </div>
   <div class="row">
     <div class="field"><label for="tagline">Descrição curta</label><input id="tagline" placeholder="Ex.: Verduras fresquinhas colhidas no dia"/></div>
