--- a/catalogo.html
+++ b/catalogo.html
@@ -11,7 +11,7 @@
   <div class="brand"><div class="avatar">FD</div><div><h1 id="storeName">Feira Digital Diamantino</h1><div id="storeInfo" class="meta"><span class="badge open">Aberto</span> • Entrega via WhatsApp</div></div></div>
   <div class="top-actions"><button id="themeToggle" class="whats-mini" aria-label="Alternar tema">Tema</button><a class="whats-mini" href="index.html">Bancas</a><button id="whatsHeader" class="whats-mini">Whats</button></div>
 </header>
-<section class="hero"><div class="search-wrap"><input id="search" type="search" placeholder="Buscar produto..."/></div><div id="categories" class="chips"></div></section>
+<section class="hero hero-with-cover"><div id="heroCover" class="hero-cover" aria-hidden="true"></div><div class="hero-inner"><div class="search-wrap"><input id="search" type="search" placeholder="Buscar produto..."/></div><div id="categories" class="chips"></div></div></section>
 <main id="products" class="cards" aria-live="polite"></main>
 <footer id="cartBar" class="cartbar hidden"><button id="openCart" class="primary">Carrinho (<span id="cartCount">0</span>) • <span id="cartTotal">R$ 0,00</span></button></footer>
 <dialog id="cartModal" class="modal"><div class="modal-head"><strong>Seu carrinho</strong><button id="closeCart" class="icon">✕</button></div><div id="cartItems" class="cart-list"></div><div class="cart-total">Total: <strong id="cartTotalModal">R$ 0,00</strong></div><button id="checkout" class="primary">Enviar pedido no WhatsApp</button></dialog>
