ajuste bancas, e pagina index

--- a/feira.html
+++ b/feira.html
@@ -7,6 +7,7 @@
   <meta name="theme-color" content="#111018" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <script>try{var t=localStorage.getItem('fd_theme'); if(t){document.documentElement.setAttribute('data-theme', t)}}catch(e){}</script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
   <script defer src="config.js"></script>
